<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">智能现金管理</string>
    <string name="login_username_hint">请输入帐号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_remember_password">记住密码</string>
    <string name="login_label_signin">登录</string>
    <string name="login_label_version">版本号:v2.0</string>


    <string name="net_title">功能选择</string>
    <string name="net_button_in">网点入库</string>
    <string name="net_button_out">网点出库</string>

    <string name="main_title">网点入库任务列表</string>
    <string name="main_title_username">张三</string>
    <string name="main_title_startdate">任务开始时间：2014/12/20 18:00</string>
    <string name="main_title_enddate">任务结束时间：2014/12/21 06:00</string>


    <string name="detail_title">请先"连接设备"</string>
    <string name="detail_person1">押运人员：</string>
    <string name="detail_person2">网点人员：</string>
    <string name="detail_branch_name">网点名称</string>
    <string name="detail_branch_address">网点地址</string>
    <string name="detail_branch_contact">网点联系人</string>
    <string name="detail_branch_tel">联系人电话</string>
    <string name="detail_check_user">巡检员</string>
    <string name="detail_check_time">巡检时间</string>
    <string name="detail_remark_hint">备注信息</string>
    <string name="detail_position">位置</string>
    <string name="detail_position_value">广州市天河区平云路</string>
    <string name="sdcard_unfound">未找到存储卡，无法存储照片！</string>


    <string name="button_operate_1">巡检正常</string>
    <string name="button_operate_2">确认交接</string>
    <string name="button_operate_3">连接设备</string>
    <string name="button_operate_4">启动扫描</string>
    <string name="button_back">返回</string>
    <string name="button_commit">提交</string>

    <string name="aim_qrcode">请对准想要识别的二维码</string>
    <string name="scan_tips">将二维码图片对准扫描框即可自动扫描</string>
    <string name="stop">停止</string>
    <string name="scan">扫描</string>
    <string name="peixiang">二维码</string>
    <string name="rfid">RFID:</string>
    <string name="scan_qc">二维码扫描</string>
    <string name="textview">TextView</string>
    <string name="save_data">保存数据</string>
    <string name="scan_QR_code">扫描二维码</string>
    <string name="QR_code_scan">二维码扫描</string>
    <string name="checkBox_delete_PeiXiang">删除之前配箱任务</string>

</resources>
