<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#ffffff"
                android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#2e66b3"
        android:orientation="horizontal">

        <Button
            android:visibility="gone"
            android:id="@+id/detail_btn_back"
            style="@style/buttonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="#3695E2"
            android:text="@string/button_back"
            tools:ignore="RtlHardcoded"/>

        <TextView
            android:id="@+id/detail_title_view"
            style="@style/titleBarText"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/detail_title"/>
    </RelativeLayout>

    <Button
        android:id="@+id/detail_btn_commit_n"
        style="@style/buttonText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:background="@drawable/shape"
        android:text="@string/button_operate_2"/>


    <TextView
        android:id="@+id/textView1"
        style="@style/timesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/yayun1_tv"
        android:layout_alignBottom="@+id/yayun1_tv"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/detail_person1"
        tools:ignore="RtlHardcoded"/>

    <TextView
        android:id="@+id/yayun1_tv"
        style="@style/timesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/Button01"
        android:layout_alignRight="@+id/Button01"
        android:layout_below="@+id/Button01"
        android:layout_toRightOf="@+id/textView1"
        android:gravity="center"
        android:padding="10dp"
        tools:ignore="RtlHardcoded"/>

    <TextView
        android:id="@+id/wangdian1_tv"
        style="@style/timesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignEnd="@+id/yayun1_tv"
        android:layout_alignRight="@+id/yayun1_tv"
        android:layout_below="@+id/textView1"
        android:layout_toRightOf="@+id/textView3"
        android:gravity="center"
        android:padding="10dp"
        tools:ignore="RtlHardcoded"/>


    <EditText
        android:id="@+id/detail_remark"
        style="@style/normalText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/detail_btn_commit_n"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:background="#F4F4F4"
        android:ems="10"
        android:gravity="left|top"
        android:hint="@string/detail_remark_hint"
        android:inputType="textMultiLine"
        android:minLines="2"
        tools:ignore="RtlHardcoded"/>

    <TextView
        android:id="@+id/textView3"
        style="@style/timesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView1"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/detail_person2"/>

    <ListView
        android:id="@+id/ListView_boxs"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/detail_remark"
        android:layout_below="@+id/textView3"
        android:divider="#F2F5F7"
        android:dividerHeight="1dp"/>

    <TextView
        android:id="@+id/yayun2_tv"
        style="@style/timesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/wangdian1_tv"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/Button01"
        android:layout_toRightOf="@+id/Button01"
        android:gravity="center"
        android:padding="10dp"
        android:text=""
        tools:ignore="RtlHardcoded"/>

    <TextView
        android:id="@+id/wangdian2_tv"
        style="@style/timesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ListView_boxs"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/yayun1_tv"
        android:layout_toRightOf="@+id/wangdian1_tv"
        android:gravity="center"
        android:padding="10dp"
        android:text=""/>

    <Button
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape"
        android:id="@+id/Button01"
        style="@style/buttonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_operate_4"
        tools:ignore="RtlHardcoded"
        android:layout_below="@+id/title_layout"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>