<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/qcode_linear_bottom"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/qcode_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#3695E2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/qcode_bt_scan"
                style="@style/buttonText"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="#3695E2"
                android:text="@string/scan"/>

            <TextView
                android:id="@+id/textView"
                style="@style/titleBarText"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/peixiang"/>

            <Button
                android:id="@+id/qcode_bt_stop"
                style="@style/buttonText"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="#3695E2"
                android:text="@string/stop"
                tools:ignore="RelativeOverlap"/>

        </RelativeLayout>

        <ListView
            android:id="@+id/list_qcdoe"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:dividerHeight="2dp">

        </ListView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/qcode_linear_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <!--<Button
            android:layout_weight="4"
            android:textColor="@color/white"
            android:id="@+id/save_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="保存"/>-->

        <Button
            android:id="@+id/qcode_update_bt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="上传数据"/>
    </LinearLayout>


</RelativeLayout>