<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#ffffff"
                android:orientation="vertical">

    <LinearLayout
        android:layout_margin="3dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginRight="50dp"
            android:layout_weight="1"
            android:src="@drawable/app_logo"
            android:layout_width="wrap_content"
            android:layout_height="35dp"/>

            <Button
                android:id="@+id/net_sysout_view"
                android:layout_width="70dp"
                android:layout_height="35dp"
                android:background="@drawable/shape"
                android:gravity="center"
                android:padding="10dp"
                android:text="退出系统"
                android:textSize="10sp"/>

            <TextView
                android:visibility="gone"
                android:id="@+id/textView1"
                style="@style/titleBarText"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/net_title"/>

            <!--<ImageView-->
            <!--android:id="@+id/net_sysout_view"-->
            <!--android:layout_width="78dp"-->
            <!--android:layout_height="30dp"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_marginLeft="18dp"-->
            <!--android:layout_toRightOf="@+id/textView1"-->
            <!--android:contentDescription="@string/app_name"-->
            <!--android:src="@drawable/out" />-->


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/peixiang_button"
                style="@style/buttonText"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_marginTop="52dp"
                android:background="@drawable/shape"
                android:text="@string/net_button_in"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/net_out_button"
                style="@style/buttonText"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:background="@drawable/shape"
                android:text="@string/net_button_out"/>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>